Fixed download links, Added rules for scrollbars aimed at mobile Update content.php, index.php, and 2 more files...

--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -64,6 +64,13 @@ img.no-save {
 	padding-top: 0.01rem;
 	padding-bottom: 0.01rem;
 }
+.hide-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+.hide-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
 
 /* Unique rules */
 #copyright-text {
